--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <a href="#about" class="mobile-menu-link hover-accent">About</a>
         <a href="#work" class="mobile-menu-link hover-accent">Work</a>
         <a href="#contact" class="mobile-menu-link hover-accent">Contact</a>
+        <a href="https://drive.google.com/file/d/1CI6ycEx1e3vvsdrwWwHcM9enFUXTa6tJ/view?usp=sharing" class="font-medium hover-accent transition-colors">Resume</a>
     </div>
 
 
